// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeSchema directives can specify custom directives 1`] = `
"directive @customDirective(code: Int = 42) on FRAGMENT_DEFINITION

type Query {
  ok: Boolean!
}"
`;

exports[`makeSchema filters can specify custom filters for directives 1`] = `
"### This file was generated by Nexus Schema
### Do not make changes to this file directly


directive @some_other_directive on OBJECT

type Query {
  ok: Boolean!
}

type Random @aws_lambda @some_other_directive {
  randomId: String!
}"
`;

exports[`makeSchema filters can specify custom filters for types 1`] = `
"### This file was generated by Nexus Schema
### Do not make changes to this file directly


type Query {
  ok: Boolean!
}

type Random {
  expiry: AWSTimestamp
  expiry2: some_other_scaler
}

scalar some_other_scaler"
`;

exports[`makeSchema shouldExitAfterGenerateArtifacts accepts a customPrintSchemaFn 1`] = `
"### This file was generated by Nexus Schema
### Do not make changes to this file directly


type Query {
  \\"\\"\\"Example boolean field\\"\\"\\"
  ok: Boolean
}"
`;
